[gd_scene format=3 uid="uid://cv5q8ffk0kk44"]

[ext_resource type="Script" uid="uid://cmuu0cc37sxne" path="res://scripts/player_remake.gd" id="1_5luv3"]
[ext_resource type="Texture2D" uid="uid://ctxs2k0r2i2q6" path="res://sprites/player_animations.png" id="2_mvqw3"]
[ext_resource type="Texture2D" uid="uid://cc5dl2muw3yrw" path="res://sprites/Hearts/PNG/animated/border/heart_animated_1.png" id="3_sitep"]
[ext_resource type="Texture2D" uid="uid://cxedp81h3bc3l" path="res://sprites/caja.png" id="4_aw3di"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fieof"]
atlas = ExtResource("2_mvqw3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7lgn"]
atlas = ExtResource("2_mvqw3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsh7f"]
atlas = ExtResource("2_mvqw3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_natdm"]
atlas = ExtResource("2_mvqw3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0emko"]
atlas = ExtResource("2_mvqw3")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g352n"]
atlas = ExtResource("2_mvqw3")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2w74"]
atlas = ExtResource("2_mvqw3")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_edkm0"]
atlas = ExtResource("2_mvqw3")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_top7k"]
atlas = ExtResource("2_mvqw3")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntrjm"]
atlas = ExtResource("2_mvqw3")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpv60"]
atlas = ExtResource("2_mvqw3")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk1nk"]
atlas = ExtResource("2_mvqw3")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3a67"]
atlas = ExtResource("2_mvqw3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6crfo"]
atlas = ExtResource("2_mvqw3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b2di"]
atlas = ExtResource("2_mvqw3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_btqa4"]
atlas = ExtResource("2_mvqw3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7omfe"]
atlas = ExtResource("2_mvqw3")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr445"]
atlas = ExtResource("2_mvqw3")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvw6g"]
atlas = ExtResource("2_mvqw3")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcoh6"]
atlas = ExtResource("2_mvqw3")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_45ocl"]
atlas = ExtResource("2_mvqw3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6h2i"]
atlas = ExtResource("2_mvqw3")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvdiu"]
atlas = ExtResource("2_mvqw3")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_epiu6"]
atlas = ExtResource("2_mvqw3")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwm3a"]
atlas = ExtResource("2_mvqw3")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdhqs"]
atlas = ExtResource("2_mvqw3")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8xbad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fieof")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7lgn")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsh7f")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_natdm")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0emko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g352n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2w74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edkm0")
}],
"loop": true,
"name": &"run_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_top7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntrjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpv60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk1nk")
}],
"loop": true,
"name": &"run_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3a67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6crfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b2di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btqa4")
}],
"loop": true,
"name": &"run_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7omfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr445")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvw6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcoh6")
}],
"loop": true,
"name": &"run_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45ocl")
}],
"loop": true,
"name": &"use_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6h2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvdiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epiu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwm3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdhqs")
}],
"loop": false,
"name": &"use_dead",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5luv3"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbi71"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4rru"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3di"]
atlas = ExtResource("3_sitep")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvqw3"]
atlas = ExtResource("3_sitep")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_42yco"]
atlas = ExtResource("3_sitep")
region = Rect2(34, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_75nov"]
atlas = ExtResource("3_sitep")
region = Rect2(51, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kpe8"]
atlas = ExtResource("3_sitep")
region = Rect2(68, 0, 17, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_fieof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw3di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvqw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42yco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75nov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kpe8")
}],
"loop": false,
"name": &"Damage_Heart",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mvqw3"]

[node name="player_remake" type="CharacterBody2D" unique_id=1900050170 groups=["player"]]
collision_layer = 9
collision_mask = 8
script = ExtResource("1_5luv3")
keys = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=726622179]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8xbad")
animation = &"use_box"
frame_progress = 0.63886845

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1587817517]
visible = false
light_mask = 9
visibility_layer = 9
shape = SubResource("CircleShape2D_5luv3")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1667413261]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="huntbox_enemy" type="Area2D" parent="." unique_id=1660440462]
collision_layer = 9
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="huntbox_enemy" unique_id=1740518804]
scale = Vector2(1.02, 1.02)
shape = SubResource("RectangleShape2D_tbi71")

[node name="huntbox_item" type="Area2D" parent="." unique_id=615530812]
visible = false
collision_layer = 9
collision_mask = 4

[node name="hurtbox_items" type="CollisionShape2D" parent="huntbox_item" unique_id=1938658687]
shape = SubResource("RectangleShape2D_h4rru")

[node name="DetectionArea" type="Area2D" parent="." unique_id=1268035786]
visible = false
collision_layer = 9
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" unique_id=1047047221]
shape = SubResource("RectangleShape2D_tbi71")

[node name="Healt_bar" type="CanvasLayer" parent="." unique_id=597981531]

[node name="HBoxContainer" type="HBoxContainer" parent="Healt_bar" unique_id=549512963]
offset_right = 40.0
offset_bottom = 40.0

[node name="Heart1" type="AnimatedSprite2D" parent="Healt_bar" unique_id=1093584906]
position = Vector2(-170, -90)
scale = Vector2(1.5588236, 1.4411764)
sprite_frames = SubResource("SpriteFrames_fieof")
animation = &"Damage_Heart"

[node name="Box_bar" type="CanvasLayer" parent="." unique_id=1237618469]

[node name="BoxUI" type="HBoxContainer" parent="Box_bar" unique_id=76837414]
offset_left = -114.0
offset_top = -72.0
offset_right = -41.0
offset_bottom = -31.0

[node name="BoxCount" type="Label" parent="Box_bar/BoxUI" unique_id=1543135896]
z_index = 1
layout_mode = 2
text = "x0"
label_settings = SubResource("LabelSettings_mvqw3")

[node name="Boxicon" type="Sprite2D" parent="Box_bar/BoxUI" unique_id=68528137]
position = Vector2(-27, -5)
scale = Vector2(7, 7)
texture = ExtResource("4_aw3di")

[connection signal="area_entered" from="huntbox_enemy" to="." method="_on_huntbox_enemy_area_entered"]
[connection signal="area_entered" from="huntbox_item" to="." method="_on_huntbox_item_area_entered"]
[connection signal="area_exited" from="huntbox_item" to="." method="_on_huntbox_item_area_exited"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
